# TeamSync

./: .gitignore  README.md  cleanup.bat
include/MEngine/: mengine.h  mengineColor.h  mengineComponent.h  mengineComponentManager.h  mengineConfig.h  mengineConsole.h  mengineEntityFactory.h  mengineEntityManager.h  mengineGraphics.h  mengineInput.h  mengineInputKeys.h  mengineInternalComponents.h  mengineLog.h  mengineMacros.h  mengineObject.h  mengineSettings.h  mengineSystem.h  mengineSystemManager.h  mengineText.h  mengineTypes.h  mengineUtility.h
include/MUtility/: MUtilityDynamicBitset.h
include/Tubes/: Tubes.h
lib/debug/x64/MEngine/: MEngine.lib
lib/debug/x64/MUtility/: MUtility.lib
lib/debug/x64/SDL_FontCache/: SDL_FontCache.lib
lib/release/x64/MEngine/: MEngine.lib
lib/release/x64/MUtility/: MUtility.lib
lib/release/x64/SDL_FontCache/: SDL_FontCache.lib
lib/release/x64/Tubes/: Tubes.lib
license/: Mirage.txt
license/Resources/Fonts/GaffersTape/: SIL Open Font License.txt
license/Resources/Fonts/Poland-canned-into-Future/: Public Domain.txt
project/: CMakeLists.txt  CopyMeDependecies.txt  cleanup.bat
resources/mirages/: ImageSynchronizer.mir
source/: AboutSystem.cpp  AboutSystem.h  GlobalsBlackboard.h  Image.cpp  Image.h  ImageGroup.cpp  ImageGroup.h  ImageJob.h  ImageJob1.h  ImageSynchronizerApp.cpp  ImageSynchronizerApp.h  LogSyncSystem.cpp  LogSyncSystem.h  Main.cpp  Main1.cpp  MainMenuSystem.cpp  MainMenuSystem.h  MainMenuSystem1.cpp  MainMenuSystem1.h  MessageBase.h  MirComponentDescriptions.h  MirParser.cpp  MirParser.h  Mirage.cpp  Mirage.h  MirageApp.h  MirageAppTypes.cpp  MirageAppTypes.h  MirageComponent.cpp  MirageComponent.h  MirageIDs.h  MirageMessages.h  MirageUtility.h  Player.cpp  Player.h  Player1.h  PlayerNames.h  Replicator.cpp  Replicator1.h  ResourcePaths.h  (+24 more)
